--- a/.github/workflows/python-test-app.yml
+++ b/.github/workflows/python-test-app.yml
@@ -15,6 +15,58 @@ env:
   AWS_REGION: eu-central-1
   AWS_LIGHTSAIL_SERVICE_NAME: franklyapp
 jobs:
+  flake8Linter:
+    runs-on: ubuntu-latest
+    needs: [SnykCodescan, Bandit-Scan, dependency-review]
+    concurrency: 
+      group: tests
+      cancel-in-progress: true
+    strategy:
+      matrix:
+        python-version: [ '2.x', '3.x']
+        #python-version: ['3.x']
+    name: Python ${{ matrix.python-version }} sample
+    steps:
+    - uses: actions/checkout@v3
+    - name: Install AWS Client
+      run: |
+        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+        unzip awscliv2.zip
+        sudo ./aws/install || true
+        aws --version
+        curl "https://s3.us-west-2.amazonaws.com/lightsailctl/latest/linux-amd64/lightsailctl" -o "lightsailctl"
+        sudo mv "lightsailctl" "/usr/local/bin/lightsailctl"
+        sudo chmod +x /usr/local/bin/lightsailctl
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-region: ${{ env.AWS_REGION }}
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    - uses: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v3
+      with:
+        python-version: '3.x'
+    - name: Running the server for tests
+      run: |
+          pip install -r requirements.txt
+          aws s3 cp s3://franklyappsecret/Env_Settings.cfg .
+    # python3 developmentserver.py
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install --upgrade pip
+        pip install playwright
+        playwright install
+        pip install flake8 pytest               
+    - name: Lint with flake8
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
   pytest:
     runs-on: ubuntu-latest
     needs: [SnykCodescan, Bandit-Scan, dependency-review]
@@ -23,8 +75,8 @@ jobs:
       cancel-in-progress: true
     strategy:
       matrix:
-        #python-version: [ '2.x', '3.x']
-        python-version: ['3.x']
+        python-version: [ '2.x', '3.x']
+        #python-version: ['3.x']
     name: Python ${{ matrix.python-version }} sample
     steps:
     - uses: actions/checkout@v3
@@ -64,12 +116,7 @@ jobs:
     - name: Test with pytest
       run: |
             pytest
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    
   
   Bandit-Scan:
     runs-on: ubuntu-latest
@@ -103,23 +150,42 @@ jobs:
   dependency-review:
     runs-on: ubuntu-latest
     concurrency: 
-      group: Dependenciesreview
+      group: Misc-Checks
     steps:
-      - name: 'Checkout Repository'
-        uses: actions/checkout@v3
-      - name: 'Dependency Review'
-        uses: actions/dependency-review-action@v1
+    - uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - uses: homoluctus/pip-audit-action@v1
+      with:
+        type: pip
+
 
   playwright:
     runs-on: ubuntu-latest
     concurrency: 
       group: tests
+      cancel-in-progress: true
     needs: [SnykCodescan, Bandit-Scan, dependency-review]
     steps:
     - run: echo "Placeholder for playwright"
 
+  ScanSensitiveData:
+    runs-on: ubuntu-18.04
+    concurrency: 
+      group: Misc-Checks
+      cancel-in-progress: true
+    steps:
+      - uses: actions/checkout@v2
+      - uses: Vannevelj/sensitivity@v1.11
+        with:
+          path: website
+          token: ${{ secrets.GITHUB_TOKEN }}
+          ignorePaths: '["src/__tests__/checker.*.test.ts"]'
+          ignoreEmails: '[".*@franklyapp.com", ".*@petervandoorn.com"]'
+
   Finishingtests:
       runs-on: ubuntu-latest
-      needs: [SnykCodescan, Bandit-Scan, pytest, dependency-review, playwright]
+      needs: [ScanSensitiveData, SnykCodescan, Bandit-Scan, pytest, dependency-review, playwright, flake8Linter]
       steps:
       - run: echo "all done!"
