--- a/.github/workflows/python-test-app.yml
+++ b/.github/workflows/python-test-app.yml
@@ -69,7 +69,7 @@ jobs:
 
   pytest:
     runs-on: ubuntu-latest
-    needs: [SnykCodescan, Bandit-Scan, dependency-review]
+    needs: [SnykCodescan, Bandit-Scan, dependency-review, ScanSensitiveData]
     concurrency: 
       group: tests
       cancel-in-progress: true
@@ -150,7 +150,8 @@ jobs:
   dependency-review:
     runs-on: ubuntu-latest
     concurrency: 
-      group: Misc-Checks
+      group: SecurityChecks
+      cancel-in-progress: true
     steps:
     - uses: actions/setup-python@v2
       with:
@@ -166,14 +167,14 @@ jobs:
     concurrency: 
       group: tests
       cancel-in-progress: true
-    needs: [SnykCodescan, Bandit-Scan, dependency-review]
+    needs: [SnykCodescan, Bandit-Scan, dependency-review, ScanSensitiveData]
     steps:
     - run: echo "Placeholder for playwright"
 
   ScanSensitiveData:
     runs-on: ubuntu-18.04
     concurrency: 
-      group: Misc-Checks
+      group: SecurityChecks
       cancel-in-progress: true
     steps:
       - uses: actions/checkout@v2
