--- a/.github/workflows/python-test-app.yml
+++ b/.github/workflows/python-test-app.yml
@@ -155,8 +155,8 @@ jobs:
       cancel-in-progress: false
     strategy:
       matrix:
-        python-version: [ '2.x', '3.x']
-        #python-version: ['3.x']
+        #python-version: [ '2.x', '3.x']
+        python-version: ['3.x']
     name: Python ${{ matrix.python-version }} Checking dependencies
     steps:
     - uses: actions/checkout@v3
@@ -188,13 +188,12 @@ jobs:
       group: Security
       cancel-in-progress: false
     steps:
-      - uses: actions/checkout@v2
-      - uses: Vannevelj/sensitivity@v1.11
-        with:
-          path: website
-          token: ${{ secrets.GITHUB_TOKEN }}
-          ignorePaths: '["/website/views.py"]'
-          ignoreEmails: '[".*@franklyapp.com", ".*@petervandoorn.com", "^email$."]'
+     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - name: Detect secrets with Talisman in incoming commits
+      uses: carhartl/talisman-secrets-scan-action@v1.2.1
+      
 
   Finishingtests:
       runs-on: ubuntu-latest
