--- a/.github/workflows/python-test-app.yml
+++ b/.github/workflows/python-test-app.yml
@@ -120,6 +120,7 @@ jobs:
     
   
   Bandit-Scan:
+    name: Scan for security threads in Python code
     runs-on: ubuntu-latest
     concurrency: 
       group: codescan
@@ -135,6 +136,7 @@ jobs:
           path: './website'
 
   SnykCodescan:
+    name: Scan for security threats with Snyk
     runs-on: ubuntu-latest
     concurrency: 
         group: codescan
@@ -149,6 +151,7 @@ jobs:
           args: --severity-threshold=high
   
   dependency-review:
+    name: Scan for security issues in dependancies
     runs-on: ubuntu-latest
     concurrency: 
       group: Security
@@ -171,6 +174,7 @@ jobs:
 
 
   playwright:
+    name: Browsertesting
     runs-on: ubuntu-latest
     needs: [SnykCodescan, Bandit-Scan, dependency-review, ScanSensitiveData]
     concurrency: 
