--- a/.github/workflows/python-test-app.yml
+++ b/.github/workflows/python-test-app.yml
@@ -215,5 +215,6 @@ jobs:
       steps:
       - uses: actions/checkout@v2
       - uses: ncipollo/release-action@v1
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          bodyFile: "readme.md"
+          token: ${{ secrets.GITHUB_TOKEN }}
