--- a/.github/workflows/python-test-app.yml
+++ b/.github/workflows/python-test-app.yml
@@ -192,7 +192,7 @@ jobs:
   Finishingtests:
       name: Sending success notification
       runs-on: ubuntu-latest
-      needs: [ pytest, playwright, flake8Linter]
+      needs: [ pytest, playwright, flake8Linter, snykcontainer]
       steps:
       - run: echo "all done!"
 
@@ -200,10 +200,56 @@ jobs:
       name: Releasing to Production
       runs-on: ubuntu-latest
 
-      needs: [ pytest, playwright, flake8Linter]
+      needs: [ pytest, playwright, flake8Linter, snykcontainer]
       steps:
       - uses: actions/checkout@v2
       - uses: ncipollo/release-action@v1
         with:
           bodyFile: "readme.md"
           token: ${{ secrets.GITHUB_TOKEN }}
+
+  snykcontainer:
+    name: Scanning containerfile
+    needs: [SnykCodescan, Bandit-Scan, dependency-review, ScanSensitiveData]
+    permissions:
+      contents: read # for actions/checkout to fetch code
+      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Install Utilities
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y jq unzip
+    - name: Install AWS Client
+      run: |
+        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+        unzip awscliv2.zip
+        sudo ./aws/install || true
+        aws --version
+        curl "https://s3.us-west-2.amazonaws.com/lightsailctl/latest/linux-amd64/lightsailctl" -o "lightsailctl"
+        sudo mv "lightsailctl" "/usr/local/bin/lightsailctl"
+        sudo chmod +x /usr/local/bin/lightsailctl
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-region: ${{ env.AWS_REGION }}
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    - name: Getting the secrets for the app
+      run: aws s3 cp s3://franklyappsecret/Env_Settings.cfg .
+    - name: Build a Docker image
+      run: docker build -t franklyapp:latest .
+    - name: Run Snyk to check Docker image for vulnerabilities
+      # Snyk can be used to break the build when it detects vulnerabilities.
+      # In this case we want to upload the issues to GitHub Code Scanning
+      continue-on-error: true
+      uses: snyk/actions/docker@14818c4695ecc4045f33c9cee9e795a788711ca4
+      env:
+        # In order to use the Snyk Action you will need to have a Snyk API token.
+        # More details in https://github.com/snyk/actions#getting-your-snyk-token
+        # or you can signup for free at https://snyk.io/login
+        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      with:
+        image: franklyapp:latest
+        args: --file=Dockerfile
