trigger to deploy added to CI

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -205,6 +205,8 @@ jobs:
       steps:
       - name: Checkout
         uses: actions/checkout@v2
+      -name: Calling deployment workflow
+        uses: two-trick-pony-NL/Frankly/.github/workflows/deployment.yml
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
