--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -197,19 +197,14 @@ jobs:
       steps:
       - run: echo "all done!"
 
-  MinorRelease:
+  Deployment:
       name: Releasing to Production
       runs-on: ubuntu-latest
 
       needs: [ pytest, playwright, flake8Linter, snykcontainer]
       steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Calling deployment workflow
-        uses: two-trick-pony-NL/Frankly/.github/workflows/deployment.yml
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
+      - name: Calling deployment script
+        run: echo "calling deployment script"
 
   snykcontainer:
     name: Scanning containerfile
