--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -195,7 +195,7 @@ jobs:
       runs-on: ubuntu-latest
       needs: [ pytest, playwright, flake8Linter, snykcontainer]
       steps:
-        uses: yanzay/notify-telegram@v0.1.0
+        - uses: yanzay/notify-telegram@v0.1.0
         if: always()
         with:
           chat: ${{ secrets.chat }} # user id or channel name secret
