--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -190,20 +190,10 @@ jobs:
       uses: carhartl/talisman-secrets-scan-action@v1.2.1
       
 
-  Finishingtests:
-      name: Sending success notification
-      runs-on: ubuntu-latest
-      needs: [ pytest, playwright, flake8Linter, snykcontainer]
-      steps:
-      - uses: appleboy/telegram-action@master
-        with:
-          to: ${{ secrets.CHAT }}
-          token: ${{ secrets.TOKEN}}
-
 
 
   Deployment:
-      name: Releasing to Production
+      name: Releasing new version
       runs-on: ubuntu-latest
 
       needs: [ pytest, playwright, flake8Linter, snykcontainer]
