--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -172,10 +172,10 @@ jobs:
       
     strategy:
       matrix:
-        testtorun: ['test-homepage', 'test-login', 'test-dashboard']
+        testtorun: ['homepage', 'login', 'dashboard']
         browser-version: [ 'Chrome']
         
-    name: Testing function ${{ matrix.testtorun }} on ${{ matrix.browser-version }}
+    name: Testing ${{ matrix.testtorun }} on ${{ matrix.browser-version }}
     steps:
     - uses: actions/checkout@v3
     - name: Install AWS Client
@@ -213,7 +213,7 @@ jobs:
 
     - name: Run Playwright
       run: |
-            python3 developmentserver.py & python3 test/playwright/${{ matrix.testtorun }}.py
+            python3 developmentserver.py & python3 test/playwright/test-${{ matrix.testtorun }}.py
 
 
   ScanSensitiveData:
